# steramlit-langchain-demo

./: .gitignore  Dockerfile  README.md  chunking.ipynb  docker-compose.yml  embed.ipynb  foo.ipynb  foo.py  live-chunkping.ipynb  main.py  old-demo.py  pyproject.toml  requirements.txt  vocab.ipynb
app/: main.py
